# Donkeycoding

./: .gitignore  Cargo.toml  README.md  start_vscode_mode.bat  start_workerflow.bat
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: adapter.rs  engine.rs  main.rs  memory.rs  operators.rs  types.rs
docker/: Dockerfile.orchestrator  README.md  docker-compose.yml
docs/: README.md  refactor_execution_zh.md  research_roo_cline_cursor.md  scheduling_deep_dive_zh.md  scheduling_framework_zh.md  scheduling_research_en.md  scheduling_research_zh.md
docs/plans/: workerflow_project_plan_zh.md
docs/research/scheduling/: scheduling_deep_dive_en.md  scheduling_framework_en.md  scheduling_research_zh.md
scripts/: start_desktop_mode.ps1  start_workerflow.ps1
